# cccnake

./: CMakeLists.txt
include/: clock.h  logic.h
src/: clock.c  logic.c  main.c
